metadata/force-app/main/default/objects/CustomName_gdziZ__c/CustomName_gdziZ__c.object-meta.xml
<CustomObject>
    <description>Description_vkASa</description>
    <label>CustomLabel_GXBYH</label>
    <nameField>
        <label>CustomLabel_GXBYH</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_GXBYHs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>