metadata/force-app/main/default/objects/CustomName_gdziZ__c/fields/CustomField_cmYvL__c.field-meta.xml
<CustomField>
    <fullName>CustomField_cmYvL__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldigamb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>