metadata/force-app/main/default/objects/CustomName_gdziZ__c/fields/CustomField_zLhQZ__c.field-meta.xml
<CustomField>
    <fullName>CustomField_zLhQZ__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldJciwO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>